Minor code reorganizatgion

--- a/CommandLine/src/Makefile
+++ b/CommandLine/src/Makefile
@@ -2,7 +2,11 @@ CXX = g++
 CXXFLAGS = -std=c++11 -Wall -O3
 INCS =
 
-all: CommandLineException.o DuplicatedOptionException.o InvalidOptionException.o UnknownOptionException.o CommandLine.o
+all: CommandLineException.o \
+	DuplicatedOptionException.o \
+	InvalidOptionException.o \
+	UnknownOptionException.o \
+	CommandLine.o
 
 .cpp.o:
 	$(CXX) $(CXXFLAGS) $(INCS) -c -o $@ $<
